@@ -14,7 +14,7 @@ deps =
 commands = flake8 {posargs}
 
 [flake8]
-exclude = .venv,venv,.tox,dist,doc,build,*.egg,docs,setup.py,fabfile.py,*/migrations/
+exclude = .venv,venv,.tox,dist,doc,build,*.egg,docs,setup.py,*/migrations/
 ignore = E121,E123,E125,E126,E127,E128,E131,E222,E226,E231,E251,E261,E265,E302,E305,E402,E714,F401,F403,F405,F841,W391
 max-line-length = 160
 # E121 continuation line under-indented for hanging indent
